--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pharmarcyapp",
+  "name": "https://joshua-inf.github.io/pharmarcyapp/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
