--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "https://joshua-inf.github.io/pharmarcyapp",
+  "name": "pharmarcyapp",
+  "homepage": "https://joshua-inf.github.io/pharmarcyapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
